
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4075: TEZ-1311 broke Hadoop2 compilation (cheolsoo)

PIG-4070: Change from TezJobConfig to TezRuntimeConfiguration (rohini)

PIG-4068: ObjectCache causes ClassCastException (cheolsoo)

PIG-4067: TestAllLoader in piggybank fails with new hive version (rohini)

PIG-4065: Fix failing unit tests in Tez (rohini)

PIG-4060: Refactor TezJob and TezLauncher (cheolsoo)

PIG-2689: JsonStorage fails to find schema when LimitAdjuster runs (rohini)

PIG-4056: Remove PhysicalOperator.setAlias (rohini)

PIG-4058: Use single config in Tez for input and output (rohini)

PIG-3886: UdfDistributedCache_1 fails in tez branch (cheolsoo)

PIG-4055 Build broke after TEZ-1130 API rename (knoguchi)

PIG-3935: Port more mini cluster tests to Tez - part 5 (rohini)

PIG-3984: PigServer.shutdown removes the tez resource folder (daijy via rohini)

PIG-4048: TEZ-692 has a incompatible API change removing TezSession (rohini)

PIG-4044: Pig should use avro-mapred-hadoop2.jar instead of avro-mapred.jar when compile with hadoop 2 (daijy)

PIG-4043: JobClient.getMap/ReduceTaskReports() causes OOM for jobs with a large number of tasks (cheolsoo)

PIG-4036: Fix e2e failures - JobManagement_3, CmdErrors_3 and BigData_4 (daijy)

PIG-4041: org.apache.pig.backend.hadoop.executionengine.tez.util.MRToTezHelper compiling error (jeagles via cheolsoo)

PIG-4038: SPRINTF should return NULL on any NULL input (mrflip via daijy)

PIG-4025: TestLoadFuncWrapper, TestLoadFuncMetaDataWrapper,TestStoreFuncWrapper
 and TestStoreFuncMetadataWrapper fail on IBM JDK (ahireanup via daijy)
