@@ -564,4 +564,4 @@ hcat.bin=/usr/local/hcat/bin/hcat
 # Enable auto parallelism in tez. This should be used by default unless
 # you encounter some bug in automatic parallelism. If set to false, use 1 as
 # default parallelism
-pig.tez.auto.parallelism=false
+pig.tez.auto.parallelism=true
