@@ -907,7 +907,6 @@ public class TestEvalPipeline2 {
     // See PIG-1766
     @Test
     public void testForEachSameOriginColumn1() throws Exception {
-        Assume.assumeTrue("Skip this test for TEZ as it hangs till PIG-4064 is fixed", Util.isMapredExecType(cluster.getExecType()));
         String[] input1 = {
                 "1\t2",
                 "1\t3",
@@ -1052,6 +1051,7 @@ public class TestEvalPipeline2 {
     // See PIG-1787
     @Test
     public void testOrderByLimitJoin() throws Exception{
+        Assume.assumeTrue("Skip this test for TEZ till TEZ-1257 is fixed", Util.isMapredExecType(cluster.getExecType()));
         String[] input1 = {
                 "1\t1",
                 "1\t2"
@@ -1193,7 +1193,6 @@ public class TestEvalPipeline2 {
     // See PIG-1812
     @Test
     public void testLocalRearrangeInReducer() throws Exception{
-        Assume.assumeTrue("Skip this test for TEZ as it hangs till PIG-4064 is fixed", Util.isMapredExecType(cluster.getExecType()));
         String[] input1 = {
                 "1\t1",
                 "1\t1",
@@ -1580,7 +1579,7 @@ public class TestEvalPipeline2 {
     // See PIG-2237
     @Test
     public void testLimitAutoReducer() throws Exception{
-        Assume.assumeTrue("Skip this test for TEZ as it hangs till PIG-4064 is fixed", Util.isMapredExecType(cluster.getExecType()));
+        Assume.assumeTrue("Skip this test for TEZ till TEZ-1257 is fixed", Util.isMapredExecType(cluster.getExecType()));
         String[] input = {
                 "1\tA",
                 "4\tB",
