@@ -79,7 +79,6 @@ public class TestLimitVariable {
 
     @Test
     public void testLimitVariable2() throws IOException {
-        Assume.assumeTrue("Skip this test for TEZ as it hangs till PIG-4064 is fixed", Util.isMapredExecType(cluster.getExecType()));
         String query =
             "a = load '" + inputFile.getName() + "' as (id, num);" +
             "b = filter a by id == 2;" + // only 1 tuple returned (2,3)
